Changelog for collective.emaillogin
===================================


0.9 (unreleased)
----------------

- Customized registered.cpy to turn the username to lowercase.
  [maurits]

- Changed getMemberByLoginName and ZODBUserManager.authenticateCredentials
  to explicitly search for the lower case login name if the initial
  literal search does not work.
  [maurits]

- Added classifiers for Plone 3.2 and 3.3 in setup.py.
  [maurits]


0.8 (2010-05-18)
----------------

- Removed mail_me functionality from join_form as this claimed to be
  sending the password, which Plone has not been doing for a long
  time, if ever.  The backend handling for this was already removed
  from Plone itself.
  [maurits]

- Fixed wrong condition and double definition where allowEnterPassword
  meant you were actually *not* allowed to enter a password.  It
  worked fine but was confusingly stated the wrong way around.
  [maurits]


0.7 (2010-02-23)
----------------

- added german translation [deichi]


0.6 (2009-05-13)
----------------

- Patched some methods in PasswordResetTool and RegistrationTool to
  make sure you can actually reset your password, even after changing
  your email address.  [maurits]

- Use email address instead of login/user name in some more spots,
  like the login form and in validation.  [maurits]


0.5 (2009-05-06)
----------------

- Fixed error on reinstall where the default skin would be set to the
  no longer existing emaillogin skin.  [maurits]

- Added profiles/default/metadata.xml: version = 1.  [maurits]

- After a successfull edit of the personalize form, do not travere to
  the personalize_form, but redirect to it.  This solves an error
  "Forbidden: Form authenticator is invalid." when changing your email
  address (= login name) and then saving the form a second time.
  [maurits]

- Changed validate_personalize.vpy to allow changing your preferences
  again.  [maurits]

- Adapted validate_personalize.vpy.  Change compared to default Plone: